WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92077
[EFL][WK2] Fix possible crash in didSendRequestForResource
https://bugs.webkit.org/show_bug.cgi?id=92077
Summary
[EFL][WK2] Fix possible crash in didSendRequestForResource
Chris Dumez
Reported
2012-07-24 01:11:25 PDT
In ewk_view_resource_load_client's didSendRequestForResource(), we need to check that the wkRedirectResponse is not NULL before using it. The redirect response may indeed may NULL if there was no redirection.
Attachments
Patch
(3.07 KB, patch)
2012-07-24 01:19 PDT
,
Chris Dumez
kenneth
: review+
Details
Formatted Diff
Diff
Patch for landing
(3.08 KB, patch)
2012-07-24 01:30 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-07-24 01:19:13 PDT
Created
attachment 153984
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2012-07-24 01:24:46 PDT
Comment on
attachment 153984
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=153984&action=review
> Source/WebKit2/UIProcess/API/efl/ewk_view.h:164 > + Ewk_Url_Response *redirect_response; /**< Possible redirect response for the resource (may be @c NULL) */
Redirect response if a redirect occurred or NULL (or similar)
Chris Dumez
Comment 3
2012-07-24 01:30:12 PDT
Created
attachment 153985
[details]
Patch for landing Fixed Kenneth's nit. Could someone please cq+ ?
WebKit Review Bot
Comment 4
2012-07-24 02:21:55 PDT
Comment on
attachment 153985
[details]
Patch for landing Clearing flags on attachment: 153985 Committed
r123444
: <
http://trac.webkit.org/changeset/123444
>
WebKit Review Bot
Comment 5
2012-07-24 02:22:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug