[EFL][WK2] Fix possible crash in didSendRequestForResource https://bugs.webkit.org/show_bug.cgi?id=92077

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-07-24
Reviewed by Kenneth Rohde Christiansen.

Add NULL check for wkRedirectResponse in
didSendRequestForResource() before using it. The
argument may be NULL if there was no redirection.

* UIProcess/API/efl/ewk_view.h:
* UIProcess/API/efl/ewk_view_resource_load_client.cpp:
(didSendRequestForResource):

Canonical link: https://commits.webkit.org/109894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123444 268f45cc-cd09-0410-ab3c-d52691b4dbfc